<resources>
    <string name="app_name">My Application</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="username">Username(*)</string>
    <string name="login_username">Username</string>
    <string name="user_inf_username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password(*)</string>
    <string name="login_password">Password</string>
    <string name="apply">Apply</string>
    <string name="firstname">Firstname</string>
    <string name="surname">Surname</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="see_reservations">Reservations</string>
    <string name="reservation_info">Reservation Info</string>
    <string name="log_out">Log Out</string>
    <string name="my_profile">My Profile</string>
    <string name="my_Home">Home</string>
    <string name="make_a_reservation">New reservation</string>
    <string name="user_information">User Information</string>
    <string name="update_user_information">Update User Information</string>
    <string name="firstnameUserInf">Firstname</string>
    <string name="surnameUserInf">Surname</string>
    <string name="emailUserInf">Email</string>
    <string name="usernameUserInf">Username</string>
    <string name="fisrtname_edit_user">Fisrtname</string>
    <string name="surname_edit_user">Surname</string>
    <string name="email_edit_user">Email</string>
    <string name="apply_edit_user">Update</string>
    <string name="password_edit_user">Password</string>
    <string name="username_edit_user">Username</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="texttxtHomeWelcome">Welcome</string>
    <string name="texttxtHomeButton">Button</string>
    <string name="userProfileActivityInitSetTitle">User Profile</string>
    <string name="reservationOptionMenu">My Reservations</string>
    <string name="start_date">Start Date:</string>
    <string name="total_cost">Total Cost</string>
    <string name="end_date">End Date:</string>
    <string name="button_go_home">Return Home</string>

    <string name="userProfileActivityonOptionsItemSelected">Your account has been successfully logged out</string>
    <string name="registerActivityonResponse">Your account has been successfully created</string>
    <string name="registerActivityonErrorResponse">Please try again</string>
    <string name="mainActivityInitSetTitle">Available Parking Spots</string>
    <string name="loginActivityInitSetTitle">Login</string>
    <string name="loginActivityInitTost">Please enter your username and password to login to your account.</string>
    <string name="loginActivityLoginUserAlertEmptyUsername">Please enter your username and password to login to your account.</string>
    <string name="loginActivityLoginUserAlertEmptyPassword">Password cannot be empty.</string>
    <string name="loginActivityLoginUserOnResponseSuscssesLogin">You have successfully logged into your account.</string>
    <string name="loginActivityLoginUserOnErrorResponse">Incorrect username or password please try again.</string>
    <string name="homeActivitySetTitle">Parking Reservation</string>
    <string name="chooseTimeActivitySetTitle">Select Time</string>
    <string name="changeInformationActivityOnResponse">Your account has been successfully updeted</string>
    <string name="billActivitySetTitle">Bill Detail"</string>
    <string name="myReservationActivitySetTitle">My Reservation"</string>
    <string name="btnRefresh">Refresh</string>
    <string name="btnChooseTime">SEE AVAILABLE SPOTS</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>


</resources>