<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item app:showAsAction="ifRoom"
        android:icon="@drawable/ic_more_vert"
        android:title="">
        <menu>
            <item
                android:id="@+id/reservationHomeOptionMenu"
                android:icon="@drawable/ic_baseline_home_24"
                android:title="@string/my_Home"
                app:showAsAction="never"/>
            <item
                android:id="@+id/reservationReservationOptionMenu"
                android:icon="@drawable/ic_baseline_bookmark_24"
                android:title="@string/reservationOptionMenu"
                app:showAsAction="never"/>
            <item
                android:id="@+id/reservationInfoOptionMenu"
                android:icon="@drawable/ic_baseline_person_24"
                android:title="@string/my_profile"
                app:showAsAction="never"/>

            <item
                android:id="@+id/optionMenuLogout"
                android:icon="@drawable/ic_baseline_exit_to_app_24"
                android:title="@string/log_out"
                app:showAsAction="never"/>
        </menu>

    </item>

</menu>