<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChanceUserInformationFragment">


        <EditText
            android:id="@+id/edittxtFirstNamechg"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/fisrtname_edit_user"
            android:inputType="textPersonName"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.076"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/edittxtSurnamechg"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/surname_edit_user"
            android:inputType="textPersonName"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittxtFirstNamechg" />

        <EditText
            android:id="@+id/edittxtemailchg"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:autofillHints="Email"
            android:ems="10"
            android:hint="@string/email_edit_user"
            android:inputType="textEmailAddress"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittxtSurnamechg" />


        <EditText
            android:id="@+id/edittxtusernamechg"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/username_edit_user"
            android:inputType="textPersonName"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittxtemailchg"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/edittxtpasswordchg"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_your_new_password"
            android:inputType="textPersonName"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittxtusernamechg"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/btnEditUserProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#93BB20"
            android:text="@string/apply_edit_user"
            android:textColor="#4527A0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittxtpasswordchg"
            app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>


