<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileActivity">

    <include
        android:id="@+id/actionbarUserProfile"
        layout="@layout/actionbar_app" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/UserProfileTabLayOut"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/green"
        app:tabTextColor="@color/white"
        app:tabSelectedTextColor="@color/black"
        app:tabIndicatorColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionbarUserProfile">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_information" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_user_information" />

    </com.google.android.material.tabs.TabLayout>


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/userProfileViewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/hello_blank_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserProfileTabLayOut" />
</androidx.constraintlayout.widget.ConstraintLayout>