<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/txtLoginUsername"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnLoginApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#93BB20"
        android:text="@string/apply"
        android:textColor="#4527A0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtLoginPassword"
        app:layout_constraintStart_toStartOf="@+id/txtLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginPassword"
        app:layout_constraintVertical_bias="0.237" />

    <EditText
        android:id="@+id/txtLoginPassword"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/txtLoginUsername"
        app:layout_constraintStart_toStartOf="@+id/txtLoginUsername"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginUsername" />

    <include
        android:id="@+id/actionbarLogin"
        layout="@layout/actionbar_app" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="185dp"
        android:layout_height="174dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionbarLogin"
        app:srcCompat="@drawable/login" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>