<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/actionbarMain"
        layout="@layout/actionbar_app" />

    <DatePicker
        android:id="@+id/datePicker1"
        android:layout_width="413dp"
        android:layout_height="214dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionbarMain"
        app:layout_constraintVertical_bias="0.047" />

    <NumberPicker
        android:id="@+id/startNumberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="@+id/datePicker1"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="@+id/datePicker1"
        app:layout_constraintTop_toBottomOf="@+id/datePicker1" />

    <NumberPicker
        android:id="@+id/endNumberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="52dp"
        app:layout_constraintBottom_toBottomOf="@+id/startNumberPicker"
        app:layout_constraintStart_toEndOf="@+id/startNumberPicker"
        app:layout_constraintTop_toTopOf="@+id/startNumberPicker"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnReserve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/startNumberPicker"
        android:text="@string/btnChooseTime"
        app:layout_constraintEnd_toEndOf="@+id/endNumberPicker"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/startNumberPicker"
        app:layout_constraintTop_toBottomOf="@+id/startNumberPicker" />

    <TextView
        android:id="@+id/textEnd"
        android:layout_width="66dp"
        android:layout_height="25dp"
        android:text="@string/end_time"
        app:layout_constraintBottom_toTopOf="@+id/endNumberPicker"
        app:layout_constraintEnd_toEndOf="@+id/endNumberPicker"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/endNumberPicker" />

    <TextView
        android:id="@+id/textStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_time"
        app:layout_constraintBottom_toTopOf="@+id/startNumberPicker"
        app:layout_constraintEnd_toEndOf="@+id/startNumberPicker"
        app:layout_constraintStart_toStartOf="@+id/startNumberPicker" />


</androidx.constraintlayout.widget.ConstraintLayout>