<?xml version="1.0" encoding="utf-8"?>



<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInformationFragment">

    <TextView
        android:id="@+id/fragmentUserInformationFirstName"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="96dp"
        android:text="@string/firstname"
        android:gravity="center"
        android:textColor="@android:color/holo_green_light"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/fragmentUserInformationSurname"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/surname"
        android:gravity="center"
        android:textColor="@android:color/holo_green_light"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/fragmentUserInformationFirstName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fragmentUserInformationFirstName"
        app:layout_constraintTop_toBottomOf="@+id/fragmentUserInformationFirstName"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/fragmentUserInformationEmail"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/emailUserInf"
        android:gravity="center"
        android:textColor="@android:color/holo_green_light"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/fragmentUserInformationSurname"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fragmentUserInformationSurname"
        app:layout_constraintTop_toBottomOf="@+id/fragmentUserInformationSurname"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txtReturnFirstname"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:text=""
        android:gravity="center"
        android:textColor="@android:color/holo_green_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/fragmentUserInformationFirstName"
        app:layout_constraintStart_toEndOf="@+id/fragmentUserInformationFirstName"
        app:layout_constraintTop_toTopOf="@+id/fragmentUserInformationFirstName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtReturnSurname"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:gravity="center"
        android:text=""
        android:textColor="@android:color/holo_green_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/fragmentUserInformationSurname"
        app:layout_constraintStart_toEndOf="@+id/fragmentUserInformationSurname"
        app:layout_constraintTop_toTopOf="@+id/fragmentUserInformationSurname"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtReturnEmail"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:text=""
        android:gravity="center"
        android:textColor="@android:color/holo_green_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/fragmentUserInformationEmail"
        app:layout_constraintStart_toEndOf="@+id/fragmentUserInformationEmail"
        app:layout_constraintTop_toTopOf="@+id/fragmentUserInformationEmail"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/fragmentUserInformationUsername"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:text="@string/username"
        android:textColor="@android:color/holo_green_light"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/fragmentUserInformationEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fragmentUserInformationEmail"
        app:layout_constraintTop_toBottomOf="@+id/fragmentUserInformationEmail"
        app:layout_constraintVertical_bias="0.067"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txtReturnUsername"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:text=""
        android:textColor="@android:color/holo_green_light"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/fragmentUserInformationUsername"
        app:layout_constraintStart_toEndOf="@+id/fragmentUserInformationUsername"
        app:layout_constraintTop_toTopOf="@+id/fragmentUserInformationUsername"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
